2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-applet.c: (cpufreq_applet_init),
	(cpufreq_applet_setup): Show the applet when the setup is done
	rather than in the init method.
	
2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-monitor-sysfs.c:
	* src/cpufreq-selector/cpufreq-selector-procfs.c:
	* src/cpufreq-selector/cpufreq-selector-sysfs.c:
	* src/cpufreq-utils.c:
	* src/cpufreq-prefs.c:
	* src/cpufreq-selector.c:
	* src/cpufreq-monitor-procfs.c:
	* src/cpufreq-monitor-cpuinfo.c: Fix several compile warnings.
	
2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-applet.c: (cpufreq_applet_size_request),
	(cpufreq_applet_refresh): Fix size requisition. If the applet is
	using a vbox in an horixontal panel, the required width is not
	labels_width + icon_width but the maximum. Fixes bug #561542.
	
2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am: Explicitly add libgnome flags and libs since
	it's needed for gnome-help so that it builds again now.
	
2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* cpufreq-utils.c:
	* cpufreq-popup.c:
	* cpufreq-prefs.h:
	* cpufreq-applet.c: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.

==================== 2.24.0.1 ====================

2008-08-20  Philipp Kerling  <k.philipp@gmail.com>

	* Makefile.am: Change mistyped "(DESTDIR)" to "$(DESTDIR)". Partially
	fixes bug #547647.

2008-05-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am:
	* src/cpufreq-applet.c:
	* src/cpufreq-popup.[ch]:
	* src/cpufreq-selector.[ch]:
	* src/cpufreq-utils.c:
	* src/cpufreq-selector/Makefile.am:
	* src/cpufreq-selector/main.c:
	* src/cpufreq-selector/cpufreq-selector-factory.[ch]:
	* src/cpufreq-selector/cpufreq-selector-service.[ch]:
	* src/cpufreq-selector/cpufreq-selector-service.xml:
	* src/cpufreq-selector/org.gnome.CPUFreqSelector.conf:
	* src/cpufreq-selector/org.gnome.CPUFreqSelector.service.in: