@@ -1,3 +1,10 @@
+2008-12-15  Carlos Garcia Campos  <carlosgc@gnome.org>
+
+	* src/cpufreq-applet.c: (cpufreq_applet_update_visibility),
+	(cpufreq_applet_update), (cpufreq_applet_setup): Fix visibility
+	when switching between graph and text modes. Based on patch by
+	Diego Escalante Urrelo.
+	
 2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>
 
 	* src/cpufreq-applet.c: (cpufreq_applet_init),
